--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ coverage = "^7.5.0"
 mypy = "^1.10.0"
 
 [build-system]
-requires = ["poetry-core", "Cython", "setuptools", "mypy"]
+requires = ["poetry-core", "Cython", "setuptools"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.build]
